little alignment fix

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ img {
 .column {
     display: flex;
     gap: 30px;
+    align-items: baseline;
 }
 
 .card {
